# asap-app

./: .gitmodules  CMakeLists.txt  CMakePresets.json
.devcontainer/: devcontainer.json
main/: CMakeLists.txt
main/src/: abstract_application.cpp  abstract_application.h  console_runner.cpp  console_runner.h  detached_application.cpp  detached_application.h  main.cpp  runner_base.cpp  runner_base.h
